samples/_failures_safe/1761533878_9f0c22_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1408c368.c: In function ‘main’:
./samples/SAFE/__tmp_1408c368.c:151:28: error: expected ‘)’ at end of input
  151 |     buffer_free(&compressed
      |                ~           ^
      |                            )
./samples/SAFE/__tmp_1408c368.c:151:5: error: expected declaration or statement at end of input
  151 |     buffer_free(&compressed
      |     ^~~~~~~~~~~
